# src/routes/publicAPI/publicApiRoutes.js
@@ -1,9 +1,14 @@
 const express = require('express');
 const router = express.Router();
 const { getAllDataComplaints, insertDataComplaint, removeDataComplaint } = require('../../controllers/publicAPI/complaintController');
+const { checkIn, checkInVerifyOtp, checkOut } = require('../../controllers/publicAPI/attendanceRecordController');
 
 router.get('/getComplaints', getAllDataComplaints);
 router.post('/insertComplaint', insertDataComplaint);
 router.delete('/removeComplaint/:id', removeDataComplaint);
+
+router.post('/checkIn', checkIn);
+router.post('/checkInVerifyOtp', checkInVerifyOtp);
+router.post('/checkOut', checkOut);
 
 module.exports = router;
